# command-vault

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
src/command_vault/: __init__.py  categories.py  cli.py  database.py  history_parser.py  indexer.py  models.py  parser.py  security.py  server.py  techniques.py  tools.py
tests/: test_chunks.py  test_parser.py
