[project]
name = "command-vault-mcp"
version = "0.7.0"
description = "Search and retrieve security commands, exploit scripts, and methodology from your pentest writeups and shell history. CLI + MCP server for AI assistants."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
command-vault = "command_vault.server:main"
vault = "command_vault.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/command_vault"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
